// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form.Item > action should not work by default 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-form-item ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-form-item-label"
      >
        <label
          class="ant-form-item-required-mark-optional"
          for="name"
          title="Name"
        >
          Name
          <span
            class="ant-form-item-optional"
            title=""
          >
            (optional)
          </span>
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-outlined"
              id="name"
              placeholder="Please enter"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form.Item > action should not work for default layout 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-form-item ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-form-item-label"
      >
        <label
          class="ant-form-item-required-mark-optional"
          for="name"
          title="Name"
        >
          Name
          <span
            class="ant-form-item-optional"
            title=""
          >
            (optional)
          </span>
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-outlined"
              id="name"
              placeholder="Please enter"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form.Item > action should not work for horizontal layout 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-form-item ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-form-item-label"
      >
        <label
          class="ant-form-item-required-mark-optional"
          for="name"
          title="Name"
        >
          Name
          <span
            class="ant-form-item-optional"
            title=""
          >
            (optional)
          </span>
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-outlined"
              id="name"
              placeholder="Please enter"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form.Item > action should work for vertical layout 1`] = `
<form
  class="ant-form ant-form-vertical"
>
  <div
    class="ant-form-item ant-form-item-vertical"
  >
    <div
      class="ant-row ant-form-item-row"
    >
      <div
        class="ant-col ant-form-item-label"
      >
        <label
          class="ant-form-item-required-mark-optional"
          for="name"
          title=""
        >
          <div>
            Name
            <span
              class="ant-form-item-action"
            >
              <a>
                Action
              </a>
            </span>
          </div>
          <span
            class="ant-form-item-optional"
            title=""
          >
            (optional)
          </span>
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-outlined"
              id="name"
              placeholder="Please enter"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
